# 2d_game_engine_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CONTROLS.md  README.md  default.glsl  level.txt.example
assets/shaders/: default.glsl
include/: mouse_listener.h  vecmath.h
include/core/: camera.h  game_object.h  imgui_layer.h  key_listener.h  mouse_listener.h  scene.h  serializer.h  sprite.h  spritesheet.h  window.h
include/editor/: copied_objects.h  drag_objects.h  grid_lines.h  highlighted_objects.h  holding_object.h  info_window.h  key_events.h  mouse_drag_events.h  mouse_events.h  object_manager.h  object_picker.h  preview_objects.h  select_objects.h  selected_objects.h  selection_box.h  serialize.h  shadows.h
include/render/: camera.h  chunk_manager.h  line.h  line_batch.h  line_renderer.h  render.h  render_batch.h  shader.h  sprite_batch.h  sprite_renderer.h  texture.h
include/util/: collision_math.h  properties.h.example  vecmath.h
lib/glad/: glad.c
lib/stb/: stb_image.cpp
src/: key_listener.cpp  main.cpp  mouse_listener.cpp  vecmath.cpp
src/core/: camera.cpp  camera.h  game_object.cpp  game_object.h  imgui_layer.cpp  imgui_layer.h  key_listener.cpp  main.cpp  mouse_listener.cpp  mouse_listener.h  scene.cpp  scene.h  serialize.cpp  serializer.cpp  shader.h  sprite.cpp  sprite.h  sprite_manager.cpp  sprite_manager.h  spritesheet.cpp  spritesheet.h  texture.cpp  window.cpp  window.h
src/editor/: behavior_manager.cpp  behavior_manager.h  behavior_system.cpp  behavior_system.h  copied_objects.cpp  copied_objects.h  drag_objects.cpp  game_object.cpp  game_object.h  grid_lines.cpp  grid_lines.h  highlighted_objects.cpp  highlighted_objects.h  holding_object.cpp  scene.h  (+29 more)
(+139 files in other folders)
